syntax = "proto3";

package user;

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "github.com/tfeng/postgres-grpc-example/auth/auth.proto";
import "google/api/annotations.proto";

message User {
    string id = 1;
    string hashedPassword = 3;
}

message CreateRequest {
    string username = 1 [(validator.field) = {length_gt: 2}];
    string password = 2 [(validator.field) = {length_gt: 6}];
}

message GetRequest {
}

service UserService {
    rpc Create(CreateRequest) returns (User) {
        option (google.api.http) = {
            post: "/v1/users/create"
            body: "*"
        };
        option (auth.checker) = {
            scope: user_creation
        };
    }

    rpc Get(GetRequest) returns (User) {
        option (google.api.http) = {
            get: "/v1/users/get"
        };
        option (auth.checker) = {
            authenticated: true
        };
    }
};
